--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,11 @@
                position: relative;">
     
     <!-- Efecto de partículas -->
-    <div id="particles-js" style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
+    <div id="particles-js" 
+         style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
 
     <!-- Contenido del header -->
-    <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 1;">
+    <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
         <div class="text-box">
             <h1 class="display-3 fw-bold">{{ page.title | default: '¡Bienvenido a Chispi Page!' }}</h1>
             <p class="lead mt-3">{{ page.subtitle | default: 'Tu rincón especial en Internet' }}</p>
