--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,6 @@
 <!-- Barra de navegación -->
-<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
+<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top"
+    style="z-index: 9999;">
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <a class="navbar-brand" href="/">Chispi Page</a>
   
