--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,29 +1,19 @@
-<!-- Barra de navegación -->
-<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top"
-    style="z-index: 9999;">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <a class="navbar-brand" href="/">Chispi Page</a>
-  
-      <!-- Botón de menú (abre y cierra) -->
-      <button id="menu-toggle" class="btn btn-dark">
-        <i class="fas fa-bars"></i>
-      </button>
-    </div>
-  </nav>
-  
-  <!-- Menú lateral -->
-  <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li><a href="/">Inicio</a></li>
-      <li><a href="/sobre-mi.html">Sobre mí</a></li>
-      <li><a href="/posts.html">Devlogs</a></li>
-      <li><a href="/proyectos.html">Proyectos</a></li>
-      <li><a href="/recursos.html">Recursos</a></li>
-      <li><a href="/contacto.html">Contacto</a></li>
-    </ul>
+<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top" style="z-index: 9999;">
+  <div class="container-fluid d-flex justify-content-between align-items-center">
+    <a class="navbar-brand" href="{{ '/' | relative_url }}">Chispi Page</a>
+    <button id="menu-toggle" class="btn btn-dark">
+      <i class="fas fa-bars"></i>
+    </button>
   </div>
-  
-  <!-- Botón scroll to top -->
-  <button class="scroll-to-top">
-    <i class="fas fa-arrow-up"></i>
-  </button>
+</nav>
+
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav">
+    <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
+    <li><a href="{{ '/sobre-mi.html' | relative_url }}">Sobre mí</a></li>
+    <li><a href="{{ '/posts.html' | relative_url }}">Devlogs</a></li>
+    <li><a href="{{ '/proyectos.html' | relative_url }}">Proyectos</a></li>
+    <li><a href="{{ '/recursos.html' | relative_url }}">Recursos</a></li>
+    <li><a href="{{ '/contacto.html' | relative_url }}">Contacto</a></li>
+  </ul>
+</div>
