--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <!-- Favicon (opcional) -->
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
+
+
     <!-- Estilos CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
@@ -47,11 +49,11 @@
     </button>
 
     <!-- Scripts -->
-    <script src="/assets/js/scripts.js"></script>
+    <script src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
-      particlesJS.load('particles-js', '/assets/particles.json', function() {
+      particlesJS.load('particles-js', '{{ '/assets/particles.json' | relative_url }}', function() {
           console.log('Particles.js loaded!');
       });
     </script>
