--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,13 @@
 <header class="hero d-flex align-items-center justify-content-center text-white text-center"
-        style="background-image: url('{{ page.hero_image | default: '/assets/img/hero-bg.jpg' | relative_url }}');
+        style="background-image: url('{{ (page.hero_image | default: '/assets/img/hero-bg.jpg') | relative_url }}');
                height: 100vh;
                background-size: cover;
                background-position: center;
                position: relative;">
     
-    <!-- Efecto de partículas -->
     <div id="particles-js" 
          style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
 
-    <!-- Contenido del header -->
     <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
         <div class="text-box">
             <h1 class="display-3 fw-bold">{{ page.title | default: '¡Bienvenido a Chispi Page!' }}</h1>
@@ -17,4 +15,5 @@
         </div>
     </div>
 </header>
+
 
