--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="{{ '/' | relative_url }}">Chispi Page</a>
     <button id="menu-toggle" class="btn btn-dark">
-      <i class="fas fa-bars"></i>
+      <i class="fa-solid fa-bars"></i>
     </button>
   </div>
 </nav>
