--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,6 +4,9 @@
     <button id="menu-toggle" class="btn btn-dark">
       <i class="fa-solid fa-bars"></i>
     </button>
+    <button id="theme-toggle" class="btn btn-outline-light ms-2" title="Cambiar tema">
+      <i class="fa-solid fa-moon"></i>
+    </button>    
   </div>
 </nav>
 
