--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
     <!-- FontAwesome (solo íconos necesarios) -->
-    <script src="https://kit.fontawesome.com/98ca02228e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-M9eCNlB4m26dw1qFZqvIbN36m2mU2hQr9UsFEm1tTrkzDL2PInYKiY5bFO+WKyLEBIHfv/YGykQ9Qzj0DwEV8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KKN4WJL07V"></script>
