--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <header class="hero d-flex align-items-center justify-content-center text-white text-center"
-        style="background-image: url('{{ (page.hero_image | default: '/assets/img/hero-bg.jpg') | relative_url }}');
-               height: 100vh;
-               background-size: cover;
-               background-position: center;
-               position: relative;">
+        data-img-dark="{{ '/assets/img/hero-bg-dark.jpg' | relative_url }}"
+        data-img-light="{{ '/assets/img/hero-bg-light.jpg' | relative_url }}">
     
     <div id="particles-js" 
          style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
@@ -15,5 +12,3 @@
         </div>
     </div>
 </header>
-
-
