--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,12 @@
 <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top" style="z-index: 9999;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="{{ '/' | relative_url }}">Chispi Page</a>
-    <button id="menu-toggle" class="btn btn-dark">
-      <i class="fa-solid fa-bars"></i>
+    <button class="menu-toggle"
+      id="menu-toggle" aria-label="Abrir menú">
     </button>
-    <button id="theme-toggle" class="btn btn-outline-light ms-2" title="Cambiar tema">
-      <i class="fa-solid fa-moon"></i>
-    </button>    
+    <button class="theme-toggle"
+      aria-label="Cambiar tema" id="theme-toggle">
+    </button>   
   </div>
 </nav>
 
@@ -19,4 +19,7 @@
     <li><a href="{{ '/recursos.html' | relative_url }}">Recursos</a></li>
     <li><a href="{{ '/contacto.html' | relative_url }}">Contacto</a></li>
   </ul>
+  <button class="close-menu-toggle"
+    aria-label="Cerrar menú">
+  </button>
 </div>
