--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mi portfolio personal con proyectos, contacto y más.">
     <title>{{ page.title }} | {{ site.title }}</title>
 
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/98ca02228e.js" crossorigin="anonymous"></script>
+
     <!-- Favicon (opcional) -->
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
-
-
 
     <!-- Estilos CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-
-    <!-- FontAwesome (solo íconos necesarios) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-M9eCNlB4m26dw1qFZqvIbN36m2mU2hQr9UsFEm1tTrkzDL2PInYKiY5bFO+WKyLEBIHfv/YGykQ9Qzj0DwEV8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KKN4WJL07V"></script>
     <script>
@@ -44,8 +42,8 @@
     {% include footer.html %}
 
     <!-- Botón Scroll To Top -->
-    <button class="scroll-to-top" aria-label="Volver arriba">
-      <i class="fa-solid fa-arrow-up"></i>
+    <button class="scroll-to-top"
+      aria-label="Volver arriba">
     </button>
 
     <!-- Scripts -->
