--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mi portfolio personal con proyectos, contacto y más.">
-    <title>{{ page.title }} | {{ site.title }}</title>
+    <title data-i18n="title">{{ page.title }} | {{ site.title }}</title>
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/98ca02228e.js" crossorigin="anonymous"></script>
