corregir fuente footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-white text-center py-4">
+<footer class="bg-dark text-center py-4">
     <div class="container">
   
       <!-- Redes Sociales -->
