corrección botón scroll to top

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center py-4">
+<footer class="text-center py-4">
     <div class="container">
   
       <!-- Redes Sociales -->
@@ -28,7 +28,10 @@
   
       <!-- Texto pequeño -->
       <small class="text-muted">© {{ site.time | date: '%Y' }} {{ site.title }}. Todos los derechos reservados.</small>
-  
+      
+      <!-- Botón de Scroll-To-Top -->
+      <button class="scroll-to-top icon-button" aria-label="Volver arriba"></button>
+
     </div>
   </footer>
   
