--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top" style="z-index: 9999;">
+<nav id="navbar" class="navbar navbar-dark fixed-top" style="z-index: 9999;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Branding -->
     <a class="navbar-brand" href="{{ '/' | relative_url }}">Chispi Page</a>
@@ -26,6 +26,3 @@
   <!-- Botón para cerrar menú -->
   <button class="icon-button" id="close-menu-toggle" aria-label="Cerrar menú" title="Cerrar"></button>
 </div>
-
-<!-- Botón Scroll to Top -->
-<button class="icon-button scroll-to-top" aria-label="Volver arriba" title="Volver arriba"></button>
