--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,16 @@ footer {
   font-weight: 900;
 }
 
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none; /* Oculto por defecto */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 1100;
+}
+
 .scroll-to-top::before {
   content: "\f106"; /* flecha arriba */
   font-family: "Font Awesome 6 Free";
