actualizar boton scroll to top

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,11 @@
     <!-- Footer -->
     {% include footer.html %}
 
-    <!-- Botón Scroll To Top -->
-    <button class="scroll-to-top"
-      aria-label="Volver arriba">
-    </button>
+      <!-- Botón de Scroll-To-Top -->
+      <button class="scroll-to-top icon-button" 
+        aria-label="Volver arriba">
+      </button>
+
 
     <!-- Scripts -->
     <script src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
