--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,8 @@
       </div>
   
       <!-- Texto pequeño -->
-      <small class="text-muted">© {{ site.time | date: '%Y' }} {{ site.title }}. Todos los derechos reservados.</small>
+      <small>© {{ site.time | date: '%Y' }} {{ site.title }}. Todos los derechos reservados.</small>
+
       
     </div>
   </footer>
