--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar navbar-dark fixed-top" style="z-index: 9999;">
+<nav id="navbar" class="navbar fixed-top" style="z-index: 9999;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Branding -->
     <a class="navbar-brand" href="{{ '/' | relative_url }}">Chispi Page</a>
